@@ -185,6 +185,11 @@ class TabContent(InfoBar):
         self.widget.pack_start(
             self.toolbar, expand=False, fill=True, padding=0)
 
+        self.main = Gtk.HPaned()
+        self.main.show()
+        self.widget.pack_start(
+            self.main, expand=True, fill=True, padding=0)
+
         viewport = Gtk.Viewport()
         viewport.set_shadow_type(Gtk.ShadowType.NONE)
         viewport.add(self.widget_get())
@@ -195,9 +200,7 @@ class TabContent(InfoBar):
             Gtk.PolicyType.AUTOMATIC, Gtk.PolicyType.AUTOMATIC)
         self.scrolledwindow.add(viewport)
         self.scrolledwindow.show()
-
-        self.widget.pack_start(
-            self.scrolledwindow, expand=True, fill=True, padding=0)
+        self.main.pack1(self.scrolledwindow, resize=True, shrink=False)
 
         self.create_info_bar()
         self.widget.pack_start(
